update test file

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,17 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="sampleproject.LandscapeTests" hash-for-method="buttons">buttons</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="sampleproject.LandscapeTests" hash-for-method="scrollDown">scrollDown</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="sampleproject.LandscapeTests" hash-for-method="scrollUp">scrollUp</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="sampleproject.PortraitTests" hash-for-method="actionSheets">actionSheets</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,28 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">sampleproject.LandscapeTests</span>
+              <span class="class-name">sampleproject.PortraitTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="buttons">
-                  </a> <!-- buttons -->
-                  <span class="method-name">buttons</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="scrollDown">
-                  </a> <!-- scrollDown -->
-                  <span class="method-name">scrollDown</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="scrollUp">
-                  </a> <!-- scrollUp -->
-                  <span class="method-name">scrollUp</span>
+                  <a name="actionSheets">
+                  </a> <!-- actionSheets -->
+                  <span class="method-name">actionSheets</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -159,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/5m/87lblby13vsf39qjlgb7909c0000gp/T/testng-eclipse--449720928/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/5m/87lblby13vsf39qjlgb7909c0000gp/T/testng-eclipse-567783906/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -168,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;sampleproject.LandscapeTests&quot;/&gt;
+      &lt;class name=&quot;sampleproject.PortraitTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -208,24 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'scrollUp')
-data.setCell(0, 2, 'sampleproject.LandscapeTests')
-data.setCell(0, 3, 14456);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'scrollDown')
-data.setCell(1, 2, 'sampleproject.LandscapeTests')
-data.setCell(1, 3, 6459);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'buttons')
-data.setCell(2, 2, 'sampleproject.LandscapeTests')
-data.setCell(2, 3, 6443);
+data.setCell(0, 1, 'actionSheets')
+data.setCell(0, 2, 'sampleproject.PortraitTests')
+data.setCell(0, 3, 12530);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 27 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -251,26 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">sampleproject.LandscapeTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">sampleproject.PortraitTests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">scrollUp</span>
-                <span class="method-start">51288 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">scrollDown</span>
-                <span class="method-start">65752 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">buttons</span>
-                <span class="method-start">72213 ms</span>
+                <span class="method-name">actionSheets</span>
+                <span class="method-start">51441 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">78660 ms</span>
+                <span class="method-start">63981 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
