--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7faa95">  <td>20/03/12 16:40:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandscapeTests.buttons()[pri:3, instance:sampleproject.LandscapeTests@1f57539]">buttons</td> 
+<tr bgcolor="7faa95">  <td>20/03/12 16:53:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortraitTests.actionSheets()[pri:1, instance:sampleproject.PortraitTests@1f57539]">actionSheets</td> 
   <td>main@1166151249</td>   <td></td> </tr>
-<tr bgcolor="7faa95">  <td>20/03/12 16:40:48</td>   <td>-6461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandscapeTests.scrollDown()[pri:2, instance:sampleproject.LandscapeTests@1f57539]">scrollDown</td> 
-  <td>main@1166151249</td>   <td></td> </tr>
-<tr bgcolor="7faa95">  <td>20/03/12 16:40:33</td>   <td>-20926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandscapeTests.scrollUp()[pri:1, instance:sampleproject.LandscapeTests@1f57539]">scrollUp</td> 
-  <td>main@1166151249</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>20/03/12 16:39:42</td>   <td>-72205</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:sampleproject.LandscapeTests@1f57539]">&gt;&gt;setup</td> 
+<tr bgcolor="a5fe93">  <td>20/03/12 16:52:12</td>   <td>-51433</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:sampleproject.PortraitTests@1f57539]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
-<tr bgcolor="a5fe93">  <td>20/03/12 16:41:01</td>   <td>6447</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:sampleproject.LandscapeTests@1f57539]">&lt;&lt;teardown</td> 
+<tr bgcolor="a5fe93">  <td>20/03/12 16:53:16</td>   <td>12540</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:sampleproject.PortraitTests@1f57539]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1166151249</td>   <td></td> </tr>
 </table>
